test/errors/types/tuple_non_tuple_assignment_fail.hy
int main()
{
    (int, string) pair = (1, "hi")
    int x = 0
    x = pair
    return 0
}
